# visual-py

./: CMakeLists.txt  visual-py.cpp
ui/: mainWindow.ui  topPanel.ui
